<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C4C63"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/baseline_health_and_safety_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="17dp"
            android:background="#94D5D5D5"
            android:hint="@string/email"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="17dp"
            android:background="#94D5D5D5"
            tools:ignore="InvalidId,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="Login"
        android:textColor="@color/white"
        app:icon="@drawable/baseline_login_24" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#523A3939" />

    <TextView
        android:id="@+id/Signupnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#A4535353"
        android:gravity="center"
        android:padding="10dp"
        android:text="Click here to Register"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-400dp"

        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="Maramba ward" />


</LinearLayout>